--- a/views/reviews-index.handlebars
+++ b/views/reviews-index.handlebars
@@ -3,3 +3,12 @@
   <h2>{{this.title}}</h2>
   <small>{{this.movieTitle}}</small>
 {{/each}}
+
+<h1>Reviews</h1>
+
+<a href="/reviews/new">New Review</a>
+
+{{#each reviews}}
+  <h2>{{this.title}}</h2>
+  <small>{{this.movieTitle}}</small>
+{{/each}}
