--- a/views/reviews-show.handlebars
+++ b/views/reviews-show.handlebars
@@ -1,11 +1,35 @@
-<a href="/">Back to Home</a>
+<!-- <a href="/">Back to Home</a>
 
 <h1>{{review.title}}</h1>
 <h2>{{review.movieTitle}}</h2>
 <p>{{review.description}}</p>
-<p><a href="/reviews/{{review._id}}/edit">Edit</a></p>
+<p><a href="/reviews/{{review._id}}/edit">Edit</a></p> -->
+
+<a href="/">Back to Home</a>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
+    <h1>{{review.title}}</h1>
+    <h2>{{review.movieTitle}}</h2>
+    <p>{{review.description}}</p>
+    <p><a href="/reviews/{{review._id}}/edit">Edit</a></p>
+    <p><form method="POST" action="/reviews/{{review._id}}?_method=DELETE">
+        <button class="btn btn-primary" type="submit">Delete</button>
+    </form></p>
+  </div>
+</div>
 
 <!-- Delete button -->
 <p><form method="POST" action="/reviews/{{review._id}}?_method=DELETE">
     <button type="submit">Delete</button>
 </form></p>
+
+<h1>Reviews</h1>
+
+<div class="row">
+  {{#each reviews}}
+    <div class="col-sm-3">
+      <h2><a href="/reviews/{{this._id}}">{{this.title}}</a></h2>
+      <small>{{this.movieTitle}}</small>
+    </div>
+  {{/each}}
+</div>
